# EpochServer

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  EpochServer.example.ini  EpochServer.ini  Jenkinsfile  Makefile  README.md  build.rs  docker-compose.redis.yml  index.html  params.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
linux/: compile.sh  compile_x64.sh
msvs/: EpochServer.sln
msvs/EpochServer/: EpochServer.vcxproj  EpochServer.vcxproj.filters
scripts/: build-x64-release.ps1  build-x64-release.sh  epochserver_ingame_tests.sqf
sqf/epoch_server_core/: README.md
sqf/epoch_server_core/compile/epoch_hive/: fn_server_hiveLog.sqf
src/: Makefile  be.rs  config.rs  dllmain.cpp  extension.rs  lib.rs  main.cpp  modern.rs  redis.rs  sqf.rs  steam.rs
src/BattlEye/: BEClient.cpp  BEClient.hpp
src/Epochlib/: Epochlib.cpp  Epochlib.hpp  Logger.cpp  Logger.hpp  RedisConnector.cpp  RedisConnector.hpp  SQF.cpp  SQF.hpp  defines.hpp
src/SteamAPI/: SteamAPI.cpp  SteamAPI.hpp
tests/: external_services.rs  live_hive_commands.rs  redis_integration.rs
